--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "terser": "^5.43.1",
